# PublicOpinionAnalytics-lkwg

./: .env.example  README.md  pyproject.toml  remark.csv
data/: stats_90w.py
data/sample_run/: model_input.jsonl  normalized.csv  ruled.csv
docs/superpowers/plans/: 2026-05-25-batch-labeling-pipeline.md  2026-05-25-public-opinion-pipeline.md
docs/superpowers/specs/: 2026-05-25-public-opinion-analysis-design.md
src/public_opinion/: __init__.py  aggregate.py  batch_label.py  cli.py  config.py  export_jsonl.py  io.py  merge_labels.py  models.py  normalize.py  prompt_schema.py  rules.py  validate_labels.py
tests/: test_aggregate.py  test_batch_build.py  test_batch_label_api.py  test_batch_pipeline_smoke.py  test_cli.py  test_config.py  test_model_io.py  test_normalize.py  test_pipeline_smoke.py  test_prompt_schema.py  test_rules.py  test_validate_labels.py
